[gd_scene load_steps=3 format=3 uid="uid://bavuqonsl4q1a"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_yy06f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqm4d"]
bg_color = Color(4.90934e-06, 0.714605, 0.420193, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yy06f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dqm4d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 525.0
offset_top = 259.0
offset_right = 628.0
offset_bottom = 395.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="How To Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 326)
scale = Vector2(30, 30)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/How To Play" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
